variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: ')' expected but 'case' found.
while (2*biscuit!=case+1) {avance()}
                  ^RunHalf:4: error: illegal start of simple expression
if (estSurOrange()) {case=case+1}
                  ^