variables.RunHalf.scala.code
var biscuit=0
var x=0
while (2*biscuit!=case+1) {avance()}
if (estSurOrange()) {case=case+1}
if (estSurBiscuit()) {biscuit=biscuit+1}